《HBase学习笔记》<= 47.2. For applications that can tolerate slightly out of date information