@@ -927,3 +927,670 @@ public static byte[][] getHexSplits(String startKey, String endKey, int numRegio
 
 ## 42. Keeping Deleted Cells
 
+​	**By default, delete markers extend back to the beginning of time. Therefore, [Get](https://hbase.apache.org/apidocs/org/apache/hadoop/hbase/client/Get.html) or [Scan](https://hbase.apache.org/apidocs/org/apache/hadoop/hbase/client/Scan.html) operations will not see a deleted cell (row or column), even when the Get or Scan operation indicates a time range before the delete marker was placed.**
+
+​	**ColumnFamilies can optionally keep deleted cells**. In this case, deleted cells can still be retrieved, as long as these operations specify a time range that ends before the timestamp of any delete that would affect the cells. This allows for point-in-time queries even in the presence of deletes.
+
+​	**Deleted cells are still subject to TTL and there will never be more than "maximum number of versions" deleted cells. A new "raw" scan options returns all deleted rows and the delete markers.**
+
+​	Change the Value of `KEEP_DELETED_CELLS` Using HBase Shell
+
+```
+hbase> hbase> alter ‘t1′, NAME => ‘f1′, KEEP_DELETED_CELLS => true
+```
+
+​	Example 12. Change the Value of `KEEP_DELETED_CELLS` Using the API
+
+```
+...
+HColumnDescriptor.setKeepDeletedCells(true);
+...
+```
+
+​	Let us illustrate the basic effect of setting the `KEEP_DELETED_CELLS` attribute on a table.
+
+​	First, without:
+
+```
+create 'test', {NAME=>'e', VERSIONS=>2147483647}
+put 'test', 'r1', 'e:c1', 'value', 10
+put 'test', 'r1', 'e:c1', 'value', 12
+put 'test', 'r1', 'e:c1', 'value', 14
+delete 'test', 'r1', 'e:c1',  11
+
+hbase(main):017:0> scan 'test', {RAW=>true, VERSIONS=>1000}
+ROW                                              COLUMN+CELL
+ r1                                              column=e:c1, timestamp=14, value=value
+ r1                                              column=e:c1, timestamp=12, value=value
+ r1                                              column=e:c1, timestamp=11, type=DeleteColumn
+ r1                                              column=e:c1, timestamp=10, value=value
+1 row(s) in 0.0120 seconds
+
+hbase(main):018:0> flush 'test'
+0 row(s) in 0.0350 seconds
+
+hbase(main):019:0> scan 'test', {RAW=>true, VERSIONS=>1000}
+ROW                                              COLUMN+CELL
+ r1                                              column=e:c1, timestamp=14, value=value
+ r1                                              column=e:c1, timestamp=12, value=value
+ r1                                              column=e:c1, timestamp=11, type=DeleteColumn
+1 row(s) in 0.0120 seconds
+
+hbase(main):020:0> major_compact 'test'
+0 row(s) in 0.0260 seconds
+
+hbase(main):021:0> scan 'test', {RAW=>true, VERSIONS=>1000}
+ROW                                              COLUMN+CELL
+ r1                                              column=e:c1, timestamp=14, value=value
+ r1                                              column=e:c1, timestamp=12, value=value
+1 row(s) in 0.0120 seconds
+```
+
+​	Notice how delete cells are let go.
+
+​	Now let’s run the same test only with `KEEP_DELETED_CELLS` set on the table (you can do table or per-column-family):
+
+```
+hbase(main):005:0> create 'test', {NAME=>'e', VERSIONS=>2147483647, KEEP_DELETED_CELLS => true}
+0 row(s) in 0.2160 seconds
+
+=> Hbase::Table - test
+hbase(main):006:0> put 'test', 'r1', 'e:c1', 'value', 10
+0 row(s) in 0.1070 seconds
+
+hbase(main):007:0> put 'test', 'r1', 'e:c1', 'value', 12
+0 row(s) in 0.0140 seconds
+
+hbase(main):008:0> put 'test', 'r1', 'e:c1', 'value', 14
+0 row(s) in 0.0160 seconds
+
+hbase(main):009:0> delete 'test', 'r1', 'e:c1',  11
+0 row(s) in 0.0290 seconds
+
+hbase(main):010:0> scan 'test', {RAW=>true, VERSIONS=>1000}
+ROW                                                                                          COLUMN+CELL
+ r1                                                                                          column=e:c1, timestamp=14, value=value
+ r1                                                                                          column=e:c1, timestamp=12, value=value
+ r1                                                                                          column=e:c1, timestamp=11, type=DeleteColumn
+ r1                                                                                          column=e:c1, timestamp=10, value=value
+1 row(s) in 0.0550 seconds
+
+hbase(main):011:0> flush 'test'
+0 row(s) in 0.2780 seconds
+
+hbase(main):012:0> scan 'test', {RAW=>true, VERSIONS=>1000}
+ROW                                                                                          COLUMN+CELL
+ r1                                                                                          column=e:c1, timestamp=14, value=value
+ r1                                                                                          column=e:c1, timestamp=12, value=value
+ r1                                                                                          column=e:c1, timestamp=11, type=DeleteColumn
+ r1                                                                                          column=e:c1, timestamp=10, value=value
+1 row(s) in 0.0620 seconds
+
+hbase(main):013:0> major_compact 'test'
+0 row(s) in 0.0530 seconds
+
+hbase(main):014:0> scan 'test', {RAW=>true, VERSIONS=>1000}
+ROW                                                                                          COLUMN+CELL
+ r1                                                                                          column=e:c1, timestamp=14, value=value
+ r1                                                                                          column=e:c1, timestamp=12, value=value
+ r1                                                                                          column=e:c1, timestamp=11, type=DeleteColumn
+ r1                                                                                          column=e:c1, timestamp=10, value=value
+1 row(s) in 0.0650 seconds
+```
+
+​	KEEP_DELETED_CELLS is to avoid removing Cells from HBase when the *only* reason to remove them is the delete marker. So with KEEP_DELETED_CELLS enabled deleted cells would get removed if either you write more versions than the configured max, or you have a TTL and Cells are in excess of the configured timeout, etc.
+
+​	KEEP_DELETED_CELLS 是为了避免从 HBase 中删除Cell，“删除”它们的唯一理由即 the delete marker。如果您编写的版本多于配置的最大版本，或者您有TTL且CELL超过配置的超时等，则 KEEP_DELETED_CELLS 启用的”已删除单元格“将被删除。
+
+## 43. Secondary Indexes and Alternate Query Paths
+
+​	This section could also be titled "what if my table rowkey looks like *this* but I also want to query my table like *that*." 
+
+​	A common example on the dist-list is where a row-key is of the format "user-timestamp" but there are reporting requirements on activity across users for certain time ranges. Thus, selecting by user is easy because it is in the lead position of the key, but time is not.
+
+​	There is no single answer on the best way to handle this because it depends on…
+
+- Number of users
+- Data size and data arrival rate
+- Flexibility of reporting requirements (e.g., completely ad-hoc date selection vs. pre-configured ranges)
+- Desired execution speed of query (e.g., 90 seconds may be reasonable to some for an ad-hoc report, whereas it may be too long for others)
+
+​	and solutions are also influenced by the size of the cluster and how much processing power you have to throw at the solution. Common techniques are in sub-sections below. This is a comprehensive, but not exhaustive, list of approaches.
+
+​	**It should not be a surprise that secondary indexes require additional cluster space and processing**. 
+
+​	*This is precisely what happens in an RDBMS because the act of creating an alternate index requires both space and processing cycles to update. RDBMS products are more advanced in this regard to handle alternative index management out of the box. However, HBase scales better at larger data volumes, so this is a feature trade-off.*
+
+> Pay attention to [Apache HBase Performance Tuning](https://hbase.apache.org/book.html#performance) when implementing any of these approaches.
+>
+> Additionally, see the David Butler response in this dist-list thread [HBase, mail # user - Stargate+hbase](http://search-hadoop.com/m/nvbiBp2TDP/Stargate%2Bhbase&subj=Stargate+hbase)
+
+### 43.1. Filter Query
+
+​	根据具体情况，使用客户端请求过滤器可能是适当的。在这种情况下，不会创建二级索引。但是，请不要在应用程序（如单线程客户端）上对这样的大表进行全面扫描。
+
+​	<small>Depending on the case, it may be appropriate to use [Client Request Filters](https://hbase.apache.org/book.html#client.filter). In this case, no secondary index is created. However, don’t try a full-scan on a large table like this from an application (i.e., single-threaded client).</small>
+
+### 43.2. Periodic-Update Secondary Index
+
+​	可以在另一个表中创建二级索引，通过 MapReduce 作业定期更新。该作业可以在一天内执行，但要取决于加载策略，它可能仍然可能与主数据表不同步。
+
+​	<small>A secondary index could be created in another table which is periodically updated via a MapReduce job. The job could be executed intra-day, but depending on load-strategy it could still potentially be out of sync with the main data table.</small>
+
+> See [mapreduce.example.readwrite](https://hbase.apache.org/book.html#mapreduce.example.readwrite) for more information.	
+
+###  43.3. Dual-Write Secondary Index
+
+​	另一种策略是在将数据发布到集群时构建二级索引（例如，写入数据表，写入索引表）。如果这是在数据表已经存在之后采取的方法，那么对于具有 MapReduce 作业的二级索引将需要引导。
+
+​	<small>Another strategy is to build the secondary index while publishing data to the cluster (e.g., write to data table, write to index table). If this is approach is taken after a data table already exists, then bootstrapping will be needed for the secondary index with a MapReduce job (see [secondary.indexes.periodic](https://hbase.apache.org/book.html#secondary.indexes.periodic)).</small>
+
+### 43.4. Summary Tables
+
+​	在时间范围非常广泛的情况下（例如，长达一年的报告）以及数据量大的地方，汇总表是一种常见的方法。这些将通过 MapReduce 作业生成到另一个表中。
+
+​	<small>Where time-ranges are very wide (e.g., year-long report) and where the data is voluminous, summary tables are a common approach. These would be generated with MapReduce jobs into another table.</small>
+
+> See [mapreduce.example.summary](https://hbase.apache.org/book.html#mapreduce.example.summary) for more information.
+
+### 43.5. Coprocessor Secondary Index
+
+​	协处理器行为类似于 RDBMS 触发器。这些在 0.92 增加。
+
+​	<small>Coprocessors act like RDBMS triggers. These were added in 0.92. For more information, see [coprocessors](https://hbase.apache.org/book.html#cp)</small>
+
+## 44. Constraints
+
+​	HBase 目前支持传统（SQL）数据库术语中的“限制（constraints）”。Constraints 的建议用法是强制执行表中属性的业务规则（例如，确保值在 1-10 范围内）。也可以使用限制来强制引用完整性，但是强烈建议不要使用限制，因为它会显着降低启用完整性检查的表的写入吞吐量。 从版本 0.94 开始，可以在Constraint 中找到有关使用限制的大量文档 。
+
+​	<small>HBase currently supports 'constraints' in traditional (SQL) database parlance. The advised usage for Constraints is in enforcing business rules for attributes in the table (e.g. make sure values are in the range 1-10). Constraints could also be used to enforce referential integrity, but this is strongly discouraged as it will dramatically decrease the write throughput of the tables where integrity checking is enabled. Extensive documentation on using Constraints can be found at [Constraint](https://hbase.apache.org/devapidocs/org/apache/hadoop/hbase/constraint/Constraint.html) since version 0.94.</small>
+
+## 45. Schema Design Case Studies
+
+以下将介绍 HBase 的一些典型的数据提取用例，以及如何处理 rowkey 设计和构造。注意：这只是潜在方法的一个例证，而不是详尽的清单。了解您的数据，并了解您的处理要求。
+
+强烈建议您在阅读这些案例研究之前先阅读“[HBase 和 Schema 设计](https://www.w3cschool.cn/hbase_doc/hbase_doc-rnwo2maw.html)”的其余部分。
+
+我们将在之后的小节中描述以下案例：
+
+- 日志数据/时间序列数据
+- Steroids上的日志数据/时间序列
+- 客户订单
+- 高/宽/中图式设计
+- 列表数据
+
+### 45.1. Case Study - Log Data and Timeseries Data
+
+​	Assume that the following data elements are being collected.
+
+- Hostname
+- Timestamp
+- Log event
+- Value/message
+
+​	We can store them in an HBase table called LOG_DATA, but what will the rowkey be? From these attributes the rowkey will be some combination of hostname, timestamp, and log-event - but what specifically?
+
+#### 45.1.1. Timestamp In The Rowkey Lead Position
+
+​	The rowkey `[timestamp][hostname][log-event]` suffers from the monotonically increasing rowkey problem described in [Monotonically Increasing Row Keys/Timeseries Data](https://hbase.apache.org/book.html#timeseries).
+
+​	There is another pattern frequently mentioned in the dist-lists about "bucketing" timestamps, by performing a mod operation on the timestamp. If time-oriented scans are important, this could be a useful approach. **Attention must be paid to the number of buckets, because this will require the same number of scans to return results.**
+
+```java
+long bucket = timestamp % numBuckets;
+```
+
+​	to construct:
+
+```java
+[bucket][timestamp][hostname][log-event]
+```
+
+​	As stated above, to select data for a particular timerange, a Scan will need to be performed for each bucket. 100 buckets, for example, will provide a wide distribution in the keyspace but it will require 100 Scans to obtain data for a single timestamp, so there are trade-offs.
+
+#### 45.1.2. Host In The Rowkey Lead Position
+
+​	如果有大量的主机在整个keyspace中进行写入和读取操作，则 rowkey `[hostname][log-event][timestamp]` 是一个候选项。如果按主机名扫描是优先事项，则此方法非常有用。
+
+​	<small>The rowkey `[hostname][log-event][timestamp]` is a candidate if there is a large-ish number of hosts to spread the writes and reads across the keyspace. This approach would be useful if scanning by hostname was a priority.</small>
+
+####  45.1.3. Timestamp, or Reverse Timestamp?
+
+​	如果最重要的访问路径是拉取最近的事件，则将时间戳存储为反向时间戳（例如，timestamp = Long.MAX_VALUE – timestamp）将创建能够对 [hostname][log-event] 执行 Scan 以获取最近捕获的事件的属性。
+
+​	这两种方法都不是错的，它只取决于什么是最适合的情况。
+
+​	<small>If the most important access path is to pull most recent events, then storing the timestamps as reverse-timestamps (e.g., `timestamp = Long.MAX_VALUE – timestamp`) will create the property of being able to do a Scan on `[hostname][log-event]` to obtain the most recently captured events.</small>
+
+​	<small>Neither approach is wrong, it just depends on what is most appropriate for the situation.</small>
+
+>  Reverse Scan API
+>
+> [HBASE-4811](https://issues.apache.org/jira/browse/HBASE-4811) implements an API to scan a table or a range within a table in reverse, reducing the need to optimize your schema for forward or reverse scanning. This feature is available in HBase 0.98 and later. See [Scan.setReversed()](https://hbase.apache.org/apidocs/org/apache/hadoop/hbase/client/Scan.html#setReversed-boolean-) for more information.
+
+#### 45.1.4. Variable Length or Fixed Length Rowkeys?
+
+​	**It is critical to remember that rowkeys are stamped on every column in HBase**. If the hostname is `a` and the event type is `e1` then the resulting rowkey would be quite small. However, what if the ingested hostname is `myserver1.mycompany.com` and the event type is `com.package1.subpackage2.subsubpackage3.ImportantService`?
+
+​	It might make sense to use some substitution in the rowkey. There are at least two approaches: hashed and numeric. In the Hostname In The Rowkey Lead Position example, it might look like this:
+
+Composite Rowkey With Hashes:
+
+- [MD5 hash of hostname] = 16 bytes
+- [MD5 hash of event-type] = 16 bytes
+- [timestamp] = 8 bytes
+
+Composite Rowkey With Numeric Substitution:
+
+For this approach another lookup table would be needed in addition to LOG_DATA, called LOG_TYPES. The rowkey of LOG_TYPES would be:
+
+- `[type]` (e.g., byte indicating hostname vs. event-type)
+- `[bytes]` variable length bytes for raw hostname or event-type.
+
+A column for this rowkey could be a long with an assigned number, which could be obtained by using an [HBase counter](https://hbase.apache.org/apidocs/org/apache/hadoop/hbase/client/Table.html#incrementColumnValue-byte:A-byte:A-byte:A-long-)
+
+So the resulting composite rowkey would be:
+
+- [substituted long for hostname] = 8 bytes
+- [substituted long for event type] = 8 bytes
+- [timestamp] = 8 bytes
+
+​	**在 Hash 或 Numeric 替换方法中，主机名和事件类型的原始值可以存储为列。**
+
+​	**In either the Hash or Numeric substitution approach, the raw values for hostname and event-type can be stored as columns.**
+
+### 45.2. Case Study - Log Data and Timeseries Data on Steroids
+
+​	这实际上是 OpenTSDB 的方法。OpenTSDB 做的是重写数据并将行打包到某些时间段中的列中。
+
+​	This effectively is the OpenTSDB approach. What OpenTSDB does is re-write data and pack rows into columns for certain time-periods. For a detailed explanation, see: http://opentsdb.net/schema.html, and [Lessons Learned from OpenTSDB](https://www.slideshare.net/cloudera/4-opentsdb-hbasecon) from HBaseCon2012.
+
+​	But this is how the general concept works: data is ingested, for example, in this manner…
+
+```java
+[hostname][log-event][timestamp1]
+[hostname][log-event][timestamp2]
+[hostname][log-event][timestamp3]
+```
+
+​	每个细节事件都有独立的 rowkeys，但是会被重写成这样：
+
+​	<small>with separate rowkeys for each detailed event, but is re-written like this…</small>
+
+```java
+[hostname][log-event][timerange]
+```
+
+​	上述每个事件都转换为存储的列，其相对于开始 timerange 的时间偏移量 (例如，每5分钟)。这显然是一个非常先进的处理技术，但 HBase 使这成为可能。	
+
+​	<small>and each of the above events are converted into columns stored with a time-offset relative to the beginning timerange (e.g., every 5 minutes). This is obviously a very advanced processing technique, but HBase makes this possible.</small>
+
+### 45.3. Case Study - Customer/Order
+
+假设 HBase 用于存储客户和订单信息。有两种核心记录类型被摄取：客户记录类型和订单记录类型。
+
+客户记录类型将包含您通常期望的所有内容：
+
+- 客户编号
+- 客户名称
+- 地址（例如，城市，州，邮编）
+- 电话号码等
+
+订单记录类型将包含如下内容：
+
+- 客户编号
+- 订单编号
+- 销售日期
+- 一系列用于装运位置和订单项的嵌套对象
+
+假设客户编号和销售订单的组合唯一地标识一个订单，对于一个订单（ORDER）表，这两个属性将组成 rowkey，特别是一个组合键，例如：
+
+```java
+[customer number][order number]
+```
+
+但是，还有更多的设计决策需要：原始值是 rowkeys 的最佳选择吗？
+
+Log Data 用例中的相同设计问题在这里面对我们。客户编号的keyspace是什么，以及格式是什么（例如，数字或是字母数字？）由于在HBase中使用固定长度的key以及可以在keyspace中支持**合理分布的key**是有利的，因此会出现类似的选项：
+
+带有哈希的复合 Rowkey：
+
+- [客户号码的 MD5] = 16字节
+- [订单号的 MD5] = 16字节
+
+复合数字/哈希组合 Rowkey：
+
+- [substituted long for customer number] = 8 bytes
+- [MD5 of order number] = 16 bytes
+
+#### 45.3.1. Single Table? Multiple Tables?
+
+A traditional design approach would have separate tables for CUSTOMER and SALES. Another option is to pack multiple record types into a single table (e.g., CUSTOMER++).
+
+Customer Record Type Rowkey:
+
+- [customer-id]
+- [type] = type indicating `1' for customer record type
+
+Order Record Type Rowkey:
+
+- [customer-id]
+- [type] = type indicating `2' for order record type
+- [order]
+
+这种特殊的 CUSTOMER ++ 方法的优点是通过客户 ID 来组织许多不同的记录类型（例如，一次扫描就可以得到关于该客户的所有信息）。缺点是扫描特定的记录类型并不容易。
+
+The advantage of this particular CUSTOMER++ approach is that organizes many different record-types by customer-id (e.g., a single scan could get you everything about that customer). The disadvantage is that it’s not as easy to scan for a particular record-type.
+
+#### 45.3.2. Order Object Design
+
+Now we need to address how to model the Order object. Assume that the class structure is as follows:
+
+- Order
+
+  (an Order can have multiple ShippingLocations
+
+- LineItem
+
+  (a ShippingLocation can have multiple LineItems
+
+there are multiple options on storing this data.
+
+##### Completely Normalized
+
+With this approach, there would be separate tables for ORDER, SHIPPING_LOCATION, and LINE_ITEM.
+
+The ORDER table’s rowkey was described above: [schema.casestudies.custorder](https://hbase.apache.org/book.html#schema.casestudies.custorder)
+
+The SHIPPING_LOCATION’s composite rowkey would be something like this:
+
+- `[order-rowkey]`
+- `[shipping location number]` (e.g., 1st location, 2nd, etc.)
+
+The LINE_ITEM table’s composite rowkey would be something like this:
+
+- `[order-rowkey]`
+- `[shipping location number]` (e.g., 1st location, 2nd, etc.)
+- `[line item number]` (e.g., 1st lineitem, 2nd, etc.)
+
+Such a normalized model is likely to be the approach with an RDBMS, but that’s not your only option with HBase. The cons of such an approach is that to retrieve information about any Order, you will need:
+
+- Get on the ORDER table for the Order
+- Scan on the SHIPPING_LOCATION table for that order to get the ShippingLocation instances
+- Scan on the LINE_ITEM for each ShippingLocation
+
+<u>granted, this is what an RDBMS would do under the covers anyway, but since there are no joins in HBase you’re just more aware of this fact.</u>
+
+##### Single Table With Record Types
+
+With this approach, there would exist a single table ORDER that would contain
+
+The Order rowkey was described above: [schema.casestudies.custorder](https://hbase.apache.org/book.html#schema.casestudies.custorder)
+
+- `[order-rowkey]`
+- `[ORDER record type]`
+
+The ShippingLocation composite rowkey would be something like this:
+
+- `[order-rowkey]`
+- `[SHIPPING record type]`
+- `[shipping location number]` (e.g., 1st location, 2nd, etc.)
+
+The LineItem composite rowkey would be something like this:
+
+- `[order-rowkey]`
+- `[LINE record type]`
+- `[shipping location number]` (e.g., 1st location, 2nd, etc.)
+- `[line item number]` (e.g., 1st lineitem, 2nd, etc.)
+
+##### Denormalized
+
+​	具有记录类型的单个表格的一种变体是对一些对象层次结构进行非规范化和扁平化，比如将 ShippingLocation 属性折叠到每个 LineItem 实例上。
+
+​	<small>A variant of the Single Table With Record Types approach is to denormalize and flatten some of the object hierarchy, such as collapsing the ShippingLocation attributes onto each LineItem instance.</small>
+
+The LineItem composite rowkey would be something like this:
+
+- `[order-rowkey]`
+- `[LINE record type]`
+- `[line item number]` (e.g., 1st lineitem, 2nd, etc., care must be taken that there are unique across the entire order)
+
+and the LineItem columns would be something like this:
+
+- itemNumber
+- quantity
+- price
+- shipToLine1 (denormalized from ShippingLocation)
+- shipToLine2 (denormalized from ShippingLocation)
+- shipToCity (denormalized from ShippingLocation)
+- shipToState (denormalized from ShippingLocation)
+- shipToZip (denormalized from ShippingLocation)
+
+​	这种方法的优点即使用不太复杂的对象层次结构，但其中一个缺点是，如果这些信息发生变化，更新会变得更加复杂。
+
+​	<small>The pros of this approach include a less complex object hierarchy, but one of the cons is that updating gets more complicated in case any of this information changes.</small>
+
+##### Object BLOB
+
+​	通过这种方法，整个 Order 对象图都以某种方式处理为 BLOB。例如，上面描述了 ORDER 表的 rowkey：schema.casestudies.custorder，而一个名为“order”的列将包含一个可以反序列化的对象，该对象包含一个容器 Order，ShippingLocations 和 LineItems。
+
+​	这里有很多选项：JSON，XML，Java 序列化，Avro，Hadoop Writable等等。所有这些都是相同方法的变体：将对象图编码为字节数组。应该注意这种方法，以确保在对象模型发生更改时保持向后兼容性，使旧的持久结构仍能从 HBase 中读出。
+
+​	优点是能够以最少的 I/O 来管理复杂的对象图（例如，在本例中每个 HBase Get 有 Order），但缺点包括前面提到的关于序列化的向后兼容性，序列化的语言依赖性（例如 Java 序列化只适用于 Java 客户端），事实上你必须反序列化整个对象才能获得 BLOB 中的任何信息，以及像 Hive 这样的框架难以使用像这样的自定义对象。
+
+### 45.4. Case Study - "Tall/Wide/Middle" Schema Design Smackdown
+
+​	This section will describe additional schema design questions that appear on the dist-list, specifically about tall and wide tables. These are general guidelines and not laws - each application must consider its own needs.
+
+#### 45.4.1. Rows vs. Versions
+
+​	A common question is whether one should prefer rows or HBase’s built-in-versioning. The context is typically where there are "a lot" of versions of a row to be retained (e.g., where it is significantly above the HBase default of 1 max versions). The rows-approach would require storing a timestamp in some portion of the rowkey so that they would not overwrite with each successive update.
+
+​	Preference: Rows (generally speaking).
+
+#### 45.4.2. Rows vs. Columns
+
+​	Another common question is whether one should prefer rows or columns. The context is typically in extreme cases of wide tables, such as having 1 row with 1 million attributes, or 1 million rows with 1 columns apiece.
+
+​	Preference: Rows (generally speaking). To be clear, this guideline is in the context is in extremely wide cases, not in the standard use-case where one needs to store a few dozen or hundred columns. But there is also a middle path between these two options, and that is "Rows as Columns."
+
+#### 45.4.3. Rows as Columns
+
+​	HBase行与列之间的中间路径将打包数据，对于某些行，这些数据将成为单独的行。在这种情况下，OpenTSDB就是最好的例子，其中一行表示一个定义的时间范围，然后将离散事件视为列。这种方法通常更加复杂，并且可能需要重写数据的额外复杂性，但具有 I/O高效的优点。
+
+​	<small>The middle path between Rows vs. Columns is packing data that would be a separate row into columns, for certain rows. OpenTSDB is the best example of this case where a single row represents a defined time-range, and then discrete events are treated as columns. This approach is often more complex, and may require the additional complexity of re-writing your data, but has the advantage of being I/O efficient. For an overview of this approach, see [schema.casestudies.log-steroids](https://hbase.apache.org/book.html#schema.casestudies.log_steroids).</small>
+
+### 45.5. Case Study - List Data
+
+以下是用户 dist-list 中关于一个相当常见问题的的交流：如何处理 Apache HBase 中的每个用户列表数据。
+
+问题：
+
+我们正在研究如何在 HBase 中存储大量（每用户）列表数据，并且我们试图弄清楚哪种访问模式最有意义。一种选择是将大部分数据存储在一个key中，所以我们可以有如下的内容：
+
+```
+<FixedWidthUserName><FixedWidthValueId1>:"" (no value)
+<FixedWidthUserName><FixedWidthValueId2>:"" (no value)
+<FixedWidthUserName><FixedWidthValueId3>:"" (no value)
+```
+
+我们的另一个选择是完全使用如下内容：
+
+```
+<FixedWidthUserName><FixedWidthPageNum0>:<FixedWidthLength><FixedIdNextPageNum><ValueId1><ValueId2><ValueId3>...
+<FixedWidthUserName><FixedWidthPageNum1>:<FixedWidthLength><FixedIdNextPageNum><ValueId1><ValueId2><ValueId3>...
+```
+
+每行将包含多个值。所以在一种情况下，读取前三十个值将是：
+
+```
+scan { STARTROW => 'FixedWidthUsername' LIMIT => 30}
+```
+
+而在第二种情况下会是这样：
+
+```
+get 'FixedWidthUserName\x00\x00\x00\x00'
+```
+
+一般的使用模式是只读取这些列表的前30个值，并且很少的访问会深入到列表中。一些用户在这些列表中总共有30个值，并且一些用户将拥有数百万（即幂律分布）。
+
+单值格式似乎会占用 HBase 上的更多空间，但会提供一些改进的检索/分页灵活性。是否有任何显着的性能优势能够通过获取和扫描的页面进行分页？
+
+<small>The single-value format seems like it would take up more space on HBase, but would offer some improved retrieval / pagination flexibility. Would there be any significant performance advantages to be able to paginate via gets vs paginating with scans?</small>
+
+我最初的理解是，如果我们的分页大小未知（并且缓存设置恰当），那么执行扫描应该会更快，但如果我们始终需要相同的页面大小，则扫描速度应该更快。我听到不同的人告诉了我关于表现的相反事情。我假设页面大小会相对一致，所以对于大多数使用情况，我们可以保证我们只需要固定页面长度的情况下的一页数据。我还会假设我们将不经常更新，但可能会插入这些列表的中间（这意味着我们需要更新所有后续行）。
+
+答案：
+
+如果我理解正确，你最终试图以“user，valueid，value”的形式存储三元组，对吗？例如：
+
+```
+"user123, firstname, Paul",
+"user234, lastname, Smith"
+```
+
+（但用户名是固定宽度，而 valueids 是固定宽度）。
+
+而且，您的访问模式符合以下要求：“对于用户 X，列出接下来的30个值，以valueid Y开头”。是对的吗？这些值应该按 valueid 排序返回？
+
+tl；dr 版本即，你可能应该为每个用户+值添加一行，除非你确定需要，否则不要自行构建复杂的行内分页方案。
+
+您的两个选项反映了人们在设计 HBase 模式时常见的问题：我应该选择“高”还是“宽”？您的第一个模式是“高（tall）”：每行代表一个用户的一个值，因此每个用户的表中有很多行；行键是 user + valueid，并且会有（可能）单个列限定符，表示“值（value）”。如果您希望按行键来扫描排序顺序中的行, 这是很好的。你可以在任何用户 + valueid 开始扫描，阅读下一个30，并完成。你放弃的是能够在一个用户的所有行周围提供事务保证，但它听起来并不像你需要的那样。
+
+<small>Your two options mirror a common question people have when designing HBase schemas: should I go "tall" or "wide"? Your first schema is "tall": each row represents one value for one user, and so there are many rows in the table for each user; the row key is user + valueid, and there would be (presumably) a single column qualifier that means "the value". This is great if you want to scan over rows in sorted order by row key (thus my question above, about whether these ids are sorted correctly). You can start a scan at any user+valueid, read the next 30, and be done. What you’re giving up is the ability to have transactional guarantees around all the rows for one user, but it doesn’t sound like you need that. Doing it this way is generally recommended (see here https://hbase.apache.org/book.html#schema.smackdown).</small>
+
+第二个选项是“宽”：使用不同的限定符（其中限定符是valueid）将一堆值存储在一行中。简单的做法是将一个用户的所有值存储在一行中。我猜你跳到了“分页”版本，因为你认为在单行中存储数百万列会对性能造成影响，这可能是也可能不是真的; 只要你不想在单个请求中做太多事情，或者做一些事情，比如扫描并返回行中的所有单元格，它不应该从根本上变坏。客户端具有允许您获取特定的列的片段的方法。
+
+<small>Your second option is "wide": you store a bunch of values in one row, using different qualifiers (where the qualifier is the valueid). The simple way to do that would be to just store ALL values for one user in a single row. I’m guessing you jumped to the "paginated" version because you’re assuming that storing millions of columns in a single row would be bad for performance, which may or may not be true; as long as you’re not trying to do too much in a single request, or do things like scanning over and returning all of the cells in the row, it shouldn’t be fundamentally worse. The client has methods that allow you to get specific slices of columns.</small>
+
+请注意，这两种情况都不会从根本上占用更多的磁盘空间; 您只是将部分识别信息“移动”到左侧（在行键中，在选项一中）或向右（在选项2中的列限定符中）。实际上，每个键/值仍然存储整个行键和列名称。
+
+<small>Note that neither case fundamentally uses more disk space than the other; you’re just "shifting" part of the identifying information for a value either to the left (into the row key, in option one) or to the right (into the column qualifiers in option 2). Under the covers, every key/value still stores the whole row key, and column family name. (If this is a bit confusing, take an hour and watch Lars George’s excellent video about understanding HBase schema design: http://www.youtube.com/watch?v=_HLoH_PgrLk).</small>
+
+正如你注意到的那样，手动分页版本有很多复杂性，例如必须跟踪每个页面中有多少内容，如果插入新值，则重新洗牌等。这看起来要复杂得多。在极高的吞吐量下它可能有一些轻微的速度优势（或缺点！），而要真正知道这一点的唯一方法就是试用它。如果您没有时间来构建它并进行比较，我的建议是从最简单的选项开始（每个用户 + valueid）。开始简单并重复！
+
+<small>A manually paginated version has lots more complexities, as you note, like having to keep track of how many things are in each page, re-shuffling if new values are inserted, etc. That seems significantly more complex. It might have some slight speed advantages (or disadvantages!) at extremely high throughput, and the only way to really know that would be to try it out. If you don’t have time to build it both ways and compare, my advice would be to start with the simplest option (one row per user+value). Start simple and iterate! :)</small>
+
+## 46. Operational and Performance Configuration Options
+
+### 46.1. Tune HBase Server RPC Handling
+
+- 设置 hbase.regionserver.handler.count（在 hbase-site.xml）为用于并发的核心 x 轴。
+- 可选地，将调用队列分成单独的读取和写入队列以用于区分服务。该参数 hbase.ipc.server.callqueue.handler.factor 指定调用队列的数量：
+  - 0 意味着单个共享队列。
+  - 1 意味着每个处理程序的一个队列。
+  - 一个0和1之间的值，按处理程序的数量成比例地分配队列数。例如，0.5 的值在每个处理程序之间共享一个队列。
+- 使用 hbase.ipc.server.callqueue.read.ratio（hbase.ipc.server.callqueue.read.share在0.98中）将调用队列分成读写队列：
+  - 0.5 意味着将有相同数量的读写队列。
+  - <0.5 表示为读多于写。
+  - \>0.5 表示写多于读。
+- 设置 hbase.ipc.server.callqueue.scan.ratio（HBase 1.0+）将读取调用队列分为短读取和长读取队列：
+  - 0.5 意味着将有相同数量的短读取和长读取队列。
+  - <0.5表示更多的短读取队列。
+  - \>0.5表示更多的长读取队列。
+
+### 46.2. Disable Nagle for RPC
+
+禁用 Nagle 的算法。延迟的 ACKs 可以增加到200毫秒的 RPC 往返时间。设置以下参数：
+
+- 在 Hadoop 的 core-site.xml 中：
+  - ipc.server.tcpnodelay = true
+  - ipc.client.tcpnodelay = true
+- 在 HBase 的 hbase-site.xml 中：
+  - hbase.ipc.client.tcpnodelay = true
+  - hbase.ipc.server.tcpnodelay = true
+
+### 46.3. Limit Server Failure Impact
+
+尽可能快地检测区域服务器故障。设置以下参数：
+
+- 在 hbase-site.xml 中设置 zookeeper.session.timeout 为30秒或更短的时间内进行故障检测（20-30秒是一个好的开始）。
+- 检测并避免不健康或失败的 HDFS 数据节点：in hdfs-site.xml 和 hbase-site.xml 设置以下参数：
+  - dfs.namenode.avoid.read.stale.datanode = true
+  - dfs.namenode.avoid.write.stale.datanode = true
+
+### 46.4. Optimize on the Server Side for Low Latency
+
+- 跳过本地块的网络。在 hbase-site.xml 中，设置以下参数：
+  - dfs.client.read.shortcircuit = true
+  - dfs.client.read.shortcircuit.buffer.size = 131072 （重要的是避免 OOME）
+- 确保数据局部性。在 hbase-site.xml 中，设置 hbase.hstore.min.locality.to.skip.major.compact = 0.7（意味着 0.7 <= n <= 1）
+- 确保 DataNode 有足够的处理程序进行块传输。在 hdfs-site.xml 中，设置以下参数：
+  - dfs.datanode.max.xcievers >= 8192
+  - dfs.datanode.handler.count = 主轴数量
+
+Skip the network for local blocks when the RegionServer goes to read from HDFS by exploiting HDFS’s [Short-Circuit Local Reads](https://hadoop.apache.org/docs/stable/hadoop-project-dist/hadoop-hdfs/ShortCircuitLocalReads.html) facility. Note how setup must be done both at the datanode and on the dfsclient ends of the conneciton — i.e. at the RegionServer and how both ends need to have loaded the hadoop native `.so` library. After configuring your hadoop setting *dfs.client.read.shortcircuit* to *true* and configuring the *dfs.domain.socket.path* path for the datanode and dfsclient to share and restarting, next configure the regionserver/dfsclient side.
+
+- In `hbase-site.xml`, set the following parameters:
+  - `dfs.client.read.shortcircuit = true`
+  - `dfs.client.read.shortcircuit.skip.checksum = true` so we don’t double checksum (HBase does its own checksumming to save on i/os. See [`hbase.regionserver.checksum.verify`](https://hbase.apache.org/book.html#hbase.regionserver.checksum.verify.performance) for more on this.
+  - `dfs.domain.socket.path` to match what was set for the datanodes.
+  - `dfs.client.read.shortcircuit.buffer.size = 131072` Important to avoid OOME — hbase has a default it uses if unset, see `hbase.dfs.client.read.shortcircuit.buffer.size`; its default is 131072.
+- Ensure data locality. In `hbase-site.xml`, set `hbase.hstore.min.locality.to.skip.major.compact = 0.7` (Meaning that 0.7 <= n <= 1)
+- Make sure DataNodes have enough handlers for block transfers. In `hdfs-site.xml`, set the following parameters:
+  - `dfs.datanode.max.xcievers >= 8192`
+  - `dfs.datanode.handler.count =` number of spindles
+
+Check the RegionServer logs after restart. You should only see complaint if misconfiguration. Otherwise, shortcircuit read operates quietly in background. It does not provide metrics so no optics on how effective it is but read latencies should show a marked improvement, especially if good data locality, lots of random reads, and dataset is larger than available cache.
+
+Other advanced configurations that you might play with, especially if shortcircuit functionality is complaining in the logs, include `dfs.client.read.shortcircuit.streams.cache.size` and `dfs.client.socketcache.capacity`. Documentation is sparse on these options. You’ll have to read source code.
+
+RegionServer metric system exposes HDFS short circuit read metrics `shortCircuitBytesRead`. Other HDFS read metrics, including `totalBytesRead` (The total number of bytes read from HDFS), `localBytesRead` (The number of bytes read from the local HDFS DataNode), `zeroCopyBytesRead` (The number of bytes read through HDFS zero copy) are available and can be used to troubleshoot short-circuit read issues.
+
+For more on short-circuit reads, see Colin’s old blog on rollout, [How Improved Short-Circuit Local Reads Bring Better Performance and Security to Hadoop](http://blog.cloudera.com/blog/2013/08/how-improved-short-circuit-local-reads-bring-better-performance-and-security-to-hadoop/). The [HDFS-347](https://issues.apache.org/jira/browse/HDFS-347) issue also makes for an interesting read showing the HDFS community at its best (caveat a few comments).
+
+### 46.5. JVM Tuning
+
+#### 46.5.1. Tune JVM GC for low collection latencies
+
+- 使用 CMS 收集器： -XX:+UseConcMarkSweepGC
+- 保持 eden 空间尽可能小，以减少平均收集时间。例：-XX：CMSInitiatingOccupancyFraction = 70
+- 优化低收集延迟而不是吞吐量： -Xmn512m
+- 并行收集 eden： -XX:+UseParNewGC
+- 避免在压力下收集： -XX:+UseCMSInitiatingOccupancyOnly
+- 限制每个请求扫描器的结果大小，所以一切都适合幸存者空间，但没有任职期限。在 hbase-site.xml 中，设置 hbase.client.scanner.max.result.size 为 eden 空间的1/8（使用 - Xmn512m，这里是〜51MB）
+- 设置 max.result.sizex handler.count 小于 survivor 空间
+
+#### 46.5.2. OS-Level Tuning
+
+- Turn transparent huge pages (THP) off:
+
+  ```
+  echo never > /sys/kernel/mm/transparent_hugepage/enabled
+  echo never > /sys/kernel/mm/transparent_hugepage/defrag
+  ```
+
+- Set `vm.swappiness = 0`
+
+- Set `vm.min_free_kbytes` to at least 1GB (8GB on larger memory systems)
+
+- Disable NUMA zone reclaim with `vm.zone_reclaim_mode = 0`
+
+##  47. Special Cases
+
+### 47.1. For applications where failing quickly is better than waiting
+
+- 在客户端的 hbase-site.xml 中，设置以下参数：
+  - 设置 hbase.client.pause = 1000
+  - 设置 hbase.client.retries.number = 3
+  - 如果你想跨越分裂和区域移动，大幅增加 hbase.client.retries.number（> = 20）
+  - 设置 RecoverableZookeeper 重试计数： zookeeper.recovery.retry = 1（不重试）
+- 在 hbase-site.xml 服务器端，设置 Zookeeper 会话超时以检测服务器故障：zookeeper.session.timeout⇐30秒（建议 20-30）。
+
+### 47.2. For applications that can tolerate slightly out of date information
+
+​	HBase 时间线一致性（HBASE-10070） 启用了只读副本后，区域（副本）的只读副本将分布在群集中。一个 RegionServer 为默认或主副本提供服务，这是唯一可以服务写入的副本。其他 Region Server 服务于辅助副本，请遵循主要 RegionServer，并仅查看提交的更新。辅助副本是只读的，但可以在主服务器故障时立即提供读取操作，从而将读取可用性的时间间隔从几秒钟减少到几毫秒。Phoenix 支持时间线一致性为 4.4.0 的提示：
+
+- 部署 HBase 1.0.0 或更高版本。
+- 在服务器端启用时间线一致性副本。
+- 使用以下方法之一设置时间线一致性：
+  - 使用 ALTER SESSION SET CONSISTENCY = 'TIMELINE’
+  - 在JDBC连接字符串中设置连接属性 Consistency 为 timeline
+
+### 47.3. More Information
+
+See the Performance section [perf.schema](https://hbase.apache.org/book.html#perf.schema) for more information about operational and performance schema design options, such as Bloom Filters, Table-configured regionsizes, compression, and blocksizes.
+
+# HBase and MapReduce
+
